--- a/ContactMe.html
+++ b/ContactMe.html
@@ -4,12 +4,27 @@
     <meta charset="utf-8">
     <title>Contact Me!</title>
   </head>
-  <body>
+  <body style="background-color: #;">
     <img src="https://imagedelivery.net/8QKadO3V6MCZsURgzUt6vA/08b05800-5cb8-4a33-789b-2290230fe400/Logo" alt="devin profile photo">
     <h1> Devin Cain </h1>
     <hr>
     <h1>My Contact Info</h1>
     <hr>
 <h2> Email: me@devincain.life </h2>
+
+<hr>
+<form action="mailto:me@devincain.life" method="post" type="text/plain">
+  <label> Your Name: </label>
+  <input type="text" name=:"Hello! My Name" value="">
+  <br>
+  <br>
+  <label> Your Email: </label>
+  <input type="email" id="email" name="My Email">
+  <br> <br>
+  <label> Your Message: </label>
+<br> <br>
+  <textarea name="My Message" rows="10" cols="26"></textarea>
+  <input type="submit" name=:"">
+</form>
   </body>
 </html>
