--- a/index.html
+++ b/index.html
@@ -4,22 +4,75 @@
   <head>
     <meta charset="utf-8">
     <title>Devin's Personal Site</title>
+
+    <style>
+      body {
+        %% text-align: center;
+          background-color: #EAF6F6;
+      }
+
+      hr {
+    %%      border-style: none;
+    %%      border-top-style: dotted;
+    %%      border-color: grey;
+    %%      border-width: 6px;
+    %%      width: 50%;
+      }
+
+    </style>
+
   </head>
 
   <body>
-    <img src="https://imagedelivery.net/8QKadO3V6MCZsURgzUt6vA/08b05800-5cb8-4a33-789b-2290230fe400/Logo" alt="devin profile photo">
-    <h1> Devin Cain </h1>
+    <table cellspacing="20">
+      <tr>
+
+    <td> <img src="https://imagedelivery.net/8QKadO3V6MCZsURgzUt6vA/08b05800-5cb8-4a33-789b-2290230fe400/Logo" alt="devin profile photo"> </td>
+<td>    <h1> Devin Cain </h1>
     <p> <strong>Sales Engineer</strong> working in the <em>Tech Industry</em> </p>
     <p> I am a web developer who loves going outdoors and exploring the world! </p>
+</td>
+</table>
     <hr>
     <h3> Education: University of Maryland</h3>
     <h4> Degree: <strong>Mechanical Engineering </strong></h4>
 
-    <h3>
-      Check out <a href="Hobbies.html">My Hobbies</a>
-     </h3>
+    <hr>
+    <h3> Work Experience </h3>
+    <table cellspacing="8">
+      <thead>
+        <tr>
+          <th> Dates </th>
+          <th> Work </th>
+        </tr>
+      </thead>
+          <tbody>
+      <tr>
+        <td> 2019-2021 </td>
+        <td> Citrix </td>
+      </tr>
+      <tr>
+        <td> 2021-2022 </td>
+        <td> Cloudflare </td>
+      </tr>
+    </tbody>
+</table>
+<hr>
+<h3> Skills </h3>
+<table cellspacing='8'>
+  <tr>
+    <td> Cybersecurity </td> <td> ⭐️⭐️⭐️⭐️⭐️ </td>
+  </tr>
+  <tr>
+    <td> Cloud Computing </td> <td> ⭐️⭐️⭐️⭐️⭐️ </td>
+  </tr>
+</table>
      <hr>
      <h4>
+
+       <h3>
+         Check out <a href="Hobbies.html">My Hobbies</a>
+        </h3>
        <br>
     <a href="ContactMe.html">Contact Me</a>
        </h4>
